List delimiter localization

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1,7 +1,11 @@
 {
     "Language": {
         "Name": "English",
-        "Region": "United States"
+        "Region": "United States",
+        "ListDelimiter": {
+            "Default": ", ",
+            "Last": ", and "
+        }
     },
     "Enum": {
         "Difficulty": {
