--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -142,6 +142,7 @@
             "DontShowAgain": "Don't Show Again"
         },
         "History": {
+            "Name": "History",
             "Time": {
                 "Today": "Today",
                 "Yesterday": "Yesterday",
@@ -165,6 +166,7 @@
             }
         },
         "MusicLibrary": {
+            "Name": "Music Library",
             "NoSongsMatchCriteria": "NO SONGS MATCH CRITERIA",
             "SearchResults": "SEARCH RESULTS",
             "AllSongs": "ALL SONGS",
@@ -175,11 +177,27 @@
             "PlayableSongs": "PLAYABLE SONGS",
             "RandomSong": "RANDOM SONG",
             "Playlists": "PLAYLISTS",
-            "Back": "BACK"
+            "Back": "BACK",
+            "NoPlayersConnected": "No players connected! Go to the profiles menu to connect a player.",
+            "Play": "Play Song"
+        },
+        "ProfileInfo": {
+            "Name": "Edit Profile",
+            "Stats": {
+                "SongPlays": "{0:N0} Song Plays",
+                "TotalScore": "Total Score",
+                "TotalStarsEarned": "Total Stars Earned",
+                "FullCombos": "Full Combos"
+            }
+        },
+        "ProfileList": {
+            "Name": "Profiles",
+            "AddBot": "Add Bot",
+            "AddProfile": "Add Profile"
         },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
-            "SongCount": "{0} <alpha=#60>Songs",
+            "SongCount": "{0:N0} <alpha=#60>Songs",
             "ScanNeeded": "<alpha=#60>Scan Needed",
             "DMXInfo": "DMX cue change and post-processing channel values:\n\n<b>Cue Change:</b>\n\n0 - No cue\n10 - Menu\n20 - Score\n30 - Intro\n40 - Verse\n50 - Chorus\n60 - Cool (loop)\n70 - Warm (loop)\n80 - Cool (manual)\n90 - Warm (manual)\n100 - Dischord\n110 - Stomp\n120 - Default\n130 - Harmony\n140 - Frenzy\n150 - Silhouettes\n160 - Silhouettes Spotlight\n170 - Searchlights\n180 - Sweep\n190 - Blackout (fast)\n200 - Blackout (slow)\n210 - Blackout (spotlight)\n220 - Flare (slow)\n230 - Flare (fast)\n240 - Big Rock Ending\n\nFor Strobe and Fog status listen to their respective channels.\n\n<b>Post-Processing:</b>\n\n0 - Default\r\n\nBasic effects\r\n4 - Bloom\n14 - Bright\n24 - Contrast\n34 - Mirror\n44 - PhotoNegative\n54 - Posterize\n\n\rColor filters/effects\r\n64 - Black And White\n74 - Sepia Tone\n84 - Silver Tone\n94 - Choppy Black And White\n104 - Photo Negative Red And Black\n114 - Polarized Black And White\n124 - Polarized Red And Blue\n134 - Desaturated Red\n144 - Desaturated Blue\n154 - Contrast Red\n164 - Contrast Green\n174 - Contrast Blue\n\r\nGrainy\r\n184 - Grainy Film\n194 - Grainy Chromatic Abberation\n\nScanlines\r\n204 - Scanlines\n214 - Scanlines Black And White\n224 - Scanlines Blue\n234 - Scanlines Security\n\r\nTrails\r\n244 - Trails\n252 - Trails Long\n253 - Trails Desaturated\n254 - Trails Flickery\n255 - Trails Spacey\n\nSee YARG docs for more information: https://docs.yarg.in/en/DMX"
         }
