Difficulty Select actions and headers localization (removed YARG.Core pointer)

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -182,6 +182,19 @@
             },
             "DontShowAgain": "Don't Show Again"
         },
+        "DifficultySelect": {
+            "Header": {
+                "Instrument": "Instrument",
+                "Difficulty": "Difficulty",
+                "Harmony": "Harmony",
+                "Modifiers": "Modifiers"
+            },
+            "Action": {
+                "Ready": "Ready",
+                "SitOut": "Sit Out",
+                "Done": "Done"
+            }
+        },
         "History": {
             "Name": "History",
             "Time": {
