--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -433,6 +433,7 @@
             },
             "BassVolume": {
                 "Name": "Bass Volume",
+                "PauseName": "Bass",
                 "Description": "Adjusts the song's bass guitar track volume. Only does something if the song is multi-track."
             },
             "ClapsInStarpower": {
@@ -445,6 +446,7 @@
             },
             "CrowdVolume": {
                 "Name": "Crowd Volume",
+                "PauseName": "Crowd",
                 "Description": "Adjusts the song's crowd track volume. Only does something if the song is multi-track."
             },
             "DisableBloom": {
@@ -501,6 +503,7 @@
             },
             "DrumsVolume": {
                 "Name": "Drums Volume",
+                "PauseName": "Drums",
                 "Description": "Adjusts the song's drum track volume. Only does something if the song is multi-track."
             },
             "FpsCap": {
@@ -527,6 +530,7 @@
             },
             "GuitarVolume": {
                 "Name": "Guitar Volume",
+                "PauseName": "Guitar",
                 "Description": "Adjusts the song's guitar track volume. Only does something if the song is multi-track."
             },
             "HighScoreInfo": {
@@ -548,6 +552,7 @@
             },
             "KeysVolume": {
                 "Name": "Keys Volume",
+                "PauseName": "Keys",
                 "Description": "Adjusts the song's keys track volume. Only does something if the song is multi-track."
             },
             "KickBounceMultiplier": {
@@ -571,6 +576,7 @@
             },
             "MasterMusicVolume": {
                 "Name": "Master Music Volume",
+                "PauseName": "Master",
                 "Description": "Adjusts the song's volume as a whole."
             },
             "MicrophoneSensitivity": {
@@ -613,10 +619,12 @@
             },
             "RhythmVolume": {
                 "Name": "Rhythm Volume",
+                "PauseName": "Rhythm",
                 "Description": "Adjusts the song's rhythm guitar track volume. Only does something if the song is multi-track. In some song formats, this may also be the bass guitar."
             },
             "SfxVolume": {
                 "Name": "SFX Volume",
+                "PauseName": "SFX",
                 "Description": "Adjusts the game's sound effect volume, such as when gaining a star, or activating starpower."
             },
             "ShowAdvancedMusicLibraryOptions": {
@@ -649,6 +657,7 @@
             },
             "SongVolume": {
                 "Name": "Backing Track Volume",
+                "PauseName": "Backing",
                 "Description": "Adjusts the song's backing track volume. These are all of the instruments that are not included in the multi-track."
             },
             "StageKitEnabled": {
@@ -691,10 +700,12 @@
             },
             "VocalMonitoring": {
                 "Name": "Vocal Monitoring Volume",
+                "PauseName": "Monitoring",
                 "Description": "Adjusts the feedback you hear when singing."
             },
             "VocalsVolume": {
                 "Name": "Vocals Volume",
+                "PauseName": "Vocals",
                 "Description": "Adjusts the song's vocal track volume. Only does something if the song is multi-track."
             },
             "VSync": {
