Change note metal color for SP phrases

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -935,6 +935,12 @@
                 },
                 "YellowStarpower": {
                     "Name": "Yellow Star Power"
+                },
+                "NoteMetal": {
+                    "Name": "Note Metal"
+                },
+                "NoteMetalStarpower": {
+                    "Name": "Note Metal in Star Power"
                 }
             },
             "EnginePreset": {
