Added more missing localization keys

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -130,6 +130,7 @@
             "Saved": "Saved!",
             "Delete": "Delete",
 
+            "Reset": "Reset",
             "ResetAll": "Reset All"
         },
         "Credits": {
