Disable SP in practice (#827)
* Found an unrelated missing quote in the localization file

* Setting to disable SP phrases in practice mode

* Fixed display of Vocals lyric color when SP is disabled

* Correct setting description

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -492,7 +492,7 @@
             },
             "DisableTextNotifications": {
                 "Name": "Disable Text Notifications",
-                "Description": "Disables text notification on the track such as \"100-Note Streak\" and \"Full Combo."
+                "Description": "Disables text notification on the track such as \"100-Note Streak\" and \"Full Combo.\""
             },
             "DMXBlueChannels": {
                 "Name": "DMX Blue",
@@ -534,6 +534,10 @@
                 "Name": "Drums Volume",
                 "PauseName": "Drums",
                 "Description": "Adjusts the song's drum track volume. Only does something if the song is multi-track."
+            },
+            "EnablePracticeSP": {
+                "Name": "Star Power in Practice",
+                "Description": "Allow Star Power phrases while in Practice Mode."
             },
             "FpsCap": {
                 "Name": "FPS Cap",
