Added missing translation key

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -132,7 +132,9 @@
             "Delete": "Delete",
 
             "Reset": "Reset",
-            "ResetAll": "Reset All"
+            "ResetAll": "Reset All",
+
+            "Analyze": "Analyze"
         },
         "Credits": {
             "Description": "Contributed To: {0}\n\n{1}",
