--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -38,7 +38,7 @@
             "FourLaneDrums": "Four Lane Drums",
             "ProDrums": "Pro Drums",
             "FiveLaneDrums": "Five Lane Drums",
-            "EliteDrums": "Elite Drums",
+            "TrueDrums": "True Drums",
             "ProGuitar_17Fret": "Pro Guitar (17-fret)",
             "ProGuitar_22Fret": "Pro Guitar (22-fret)",
             "ProBass_17Fret": "Pro Bass (17-fret)",
@@ -86,7 +86,6 @@
             "FourLaneDrums": "Four Lane Drums",
             "ProDrums": "Pro Drums",
             "FiveLaneDrums": "Five Lane Drums",
-            "EliteDrums": "Elite Drums",
             "ProGuitar_17": "Pro Guitar (17-fret)",
             "ProGuitar_22": "Pro Guitar (22-fret)",
             "ProBass_17": "Pro Bass (17-fret)",
@@ -98,41 +97,10 @@
         }
     },
     "Menu": {
-        "Calibrator": {
-            "Detected": "Detected",
-            "NotEnoughData": "There isn't enough data to get an accurate result.\nPress back to exit."
-        },
         "Common": {
-            "Apply": "Apply",
             "Back": "Back",
-            "Cancel": "Cancel",
-            "Close": "Close",
-            "Confirm": "Confirm",
-            "Continue": "Continue",
-            "On": "On",
-            "Off": "Off",
-
-            "Up": "Up",
-            "Down": "Down",
-            "Left": "Left",
-            "Right": "Right",
-
-            "Next": "Next",
-            "Previous": "Previous",
-            "NextTab": "Next Tab",
-            "PreviousTab": "Previous Tab",
-
-            "Increase": "Increase",
-            "Decrease": "Decrease",
             "Max": "Max",
-            "Min": "Min",
-
-            "Save": "Save",
-            "Saved": "Saved!",
-            "Delete": "Delete",
-
-            "Reset": "Reset",
-            "ResetAll": "Reset All"
+            "Min": "Min"
         },
         "Credits": {
             "Description": "Contributed To: {0}\n\n{1}",
@@ -161,16 +129,7 @@
         "Dialog": {
             "AntiPiracy": {
                 "Title": "YARG Anti-Piracy Statement",
-                "Description": "<b>YARG stands firmly against all forms of piracy.</b> We neither support nor endorse piracy, as it is a violation of copyright law with serious legal consequences. Our platform's importable content—designed for creators to share their work and for educational purposes—does not justify or excuse piracy.\n\nYARG itself <b>does not</b> use any ripped/pirated assets or music and never will. By using YARG, users agree not to promote or endorse piracy in any way through our platform. Upholding these principles ensures a community that respects copyright, creativity, and legal standards.\n\nYARG stands for \"Yet Another Rhythm Game\" and NOT for pirates.",
-                "Confirm": "I Understand"
-            },
-            "ColorPicker": {
-                "Title": "Color Picker"
-            },
-            "ConfirmDelete": {
-                "Title": "Delete \"{0}\"?",
-                "Message": "Are you sure you want to delete <b>{0}</b>?\n\n{1}",
-                "Confirm": "Type <b>{0}</b> here to confirm"
+                "Description": "<b>YARG stands firmly against all forms of piracy.</b> We neither support nor endorse piracy, as it is a violation of copyright law with serious legal consequences. Our platform's importable content—designed for creators to share their work and for educational purposes—does not justify or excuse piracy.\n\nYARG itself <b>does not</b> use any ripped/pirated assets or music and never will. By using YARG, users agree not to promote or endorse piracy in any way through our platform. Upholding these principles ensures a community that respects copyright, creativity, and legal standards.\n\nYARG stands for \"Yet Another Rhythm Game\" and NOT for pirates."
             },
             "EngineInconsistency": {
                 "Title": "Replays Are In Beta",
@@ -185,15 +144,6 @@
                 "Description": "One or more of the songs you scanned were corrupted, formatted incorrectly, or encrypted, and <b>could not be loaded into the game.</b>\n\nFor more info, please check the file located at \"{0}\"."
             },
             "DontShowAgain": "Don't Show Again"
-        },
-        "DifficultySelect": {
-            "Instrument": "Instrument",
-            "Difficulty": "Difficulty",
-            "Harmony": "Harmony",
-            "Modifiers": "Modifiers",
-            "Ready": "Ready",
-            "SitOut": "Sit Out",
-            "Done": "Done"
         },
         "History": {
             "Name": "History",
@@ -217,8 +167,7 @@
                 "Settings": "Settings",
                 "Credits": "Credits",
                 "Exit": "Exit"
-            },
-            "GoToCurrentlyPlaying": "Go To Currently Playing"
+            }
         },
         "MusicLibrary": {
             "Name": "Music Library",
@@ -232,27 +181,9 @@
             "PlayableSongs": "PLAYABLE SONGS",
             "RandomSong": "RANDOM SONG",
             "Playlists": "PLAYLISTS",
-            "Popup": {
-                "Header": {
-                    "SortBy": "Sort By...",
-                    "GoTo": "Go To..."
-                },
-                "Item": {
-                    "RandomSong": "Random Song",
-                    "BackToTop": "Back to Top",
-                    "SortBy": "Sort By: {0}",
-                    "GoToSection": "Go To Section...",
-                    "AddToFavorites": "Add To Favorites",
-                    "RemoveFromFavorites": "Remove From Favorites",
-                    "ViewSongFolder": "View Song Folder",
-                    "CopySongChecksum": "Copy Song Checksum"
-                }
-            },
             "Back": "BACK",
             "NoPlayersConnected": "No players connected! Go to the profiles menu to connect a player.",
-            "Play": "Play Song",
-            "Search": "Search",
-            "MoreOptions": "<align=left><size=80%>More Options<br>(Hold) Navigate Sections</size></align>"
+            "Play": "Play Song"
         },
         "ProfileInfo": {
             "Name": "Edit Profile",
@@ -270,56 +201,16 @@
         },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
-            "SearchHeader": {
-                "AllCategories": "All Categories",
-                "Results": "Results"
-            },
             "SongCount": "{0:N0} <alpha=#60>Songs",
             "ScanNeeded": "<alpha=#60>Scan Needed",
             "DMXInfo": "DMX cue change and post-processing channel values:\n\n<b>Cue Change:</b>\n\n0 - No cue\n10 - Menu\n20 - Score\n30 - Intro\n40 - Verse\n50 - Chorus\n60 - Cool (loop)\n70 - Warm (loop)\n80 - Cool (manual)\n90 - Warm (manual)\n100 - Dischord\n110 - Stomp\n120 - Default\n130 - Harmony\n140 - Frenzy\n150 - Silhouettes\n160 - Silhouettes Spotlight\n170 - Searchlights\n180 - Sweep\n190 - Blackout (fast)\n200 - Blackout (slow)\n210 - Blackout (spotlight)\n220 - Flare (slow)\n230 - Flare (fast)\n240 - Big Rock Ending\n\nFor Strobe and Fog status listen to their respective channels.\n\n<b>Post-Processing:</b>\n\n0 - Default\r\n\nBasic effects\r\n4 - Bloom\n14 - Bright\n24 - Contrast\n34 - Mirror\n44 - PhotoNegative\n54 - Posterize\n\n\rColor filters/effects\r\n64 - Black And White\n74 - Sepia Tone\n84 - Silver Tone\n94 - Choppy Black And White\n104 - Photo Negative Red And Black\n114 - Polarized Black And White\n124 - Polarized Red And Blue\n134 - Desaturated Red\n144 - Desaturated Blue\n154 - Contrast Red\n164 - Contrast Green\n174 - Contrast Blue\n\r\nGrainy\r\n184 - Grainy Film\n194 - Grainy Chromatic Abberation\n\nScanlines\r\n204 - Scanlines\n214 - Scanlines Black And White\n224 - Scanlines Blue\n234 - Scanlines Security\n\r\nTrails\r\n244 - Trails\n252 - Trails Long\n253 - Trails Desaturated\n254 - Trails Flickery\n255 - Trails Spacey\n\nSee YARG docs for more information: https://docs.yarg.in/en/DMX"
-        }
-    },
-    "Gameplay": {
-        "Notifications": {
-            "BassGroove": "BASS GROOVE",
-            "CountdownGetReady": "Get Ready!",
-            "FullCombo": "FULL COMBO",
-            "HotStart": "HOT START",
-            "NewHighScore": "NEW HIGH SCORE",
-            "NoteStreak": "{0:N0}-NOTE STREAK",
-            "StarPowerReady": "STAR POWER READY",
-            "StrongFinish": "STRONG FINISH"
-        },
-        "Solo": {
-            "Performance": {
-                "Awesome": "AWESOME\nSOLO!",
-                "Good": "GOOD\nSOLO!",
-                "Great": "GREAT\nSOLO!",
-                "How": "HOW!?",
-                "Messy": "MESSY\nSOLO",
-                "Nice": "<i>NICE</i>\nSOLO",
-                "Okay": "OKAY\nSOLO",
-                "Perfect": "PERFECT\nSOLO!",
-                "Solid":  "SOLID\nSOLO"
-            },
-            "PointsResult": "{0:N0}\nPOINTS"
-        },
-        "Vocals": {
-            "Performance": {
-                "Awesome": "AWESOME!",
-                "Awful": "AWFUL",
-                "Good": "GOOD",
-                "Messy": "MESSY",
-                "Okay": "OKAY",
-                "Strong": "STRONG"
-            }
         }
     },
 	"Preview": {
 		"Experimental": {
 			"Notice": "IMPORTANT\n\nThese settings represent a work in progress. They are subject to change, may contain bugs, and could even cause major problems if enabled."
 		}
-	},
+	},		
     "Discord": {
         "Default": {
             "Details": "Hello there ladies and gentlemen!",
@@ -456,26 +347,16 @@
                 "Name": "Audio Calibration (ms)",
                 "Description": "Audio calibration in milliseconds. Use the calibrator to automatically calibrate. Higher values make the audio play earlier, while lower ones make the audio play later."
             },
-            "AccountForHardwareLatency": {
-                "Name": "Account For Audio Hardware Latency",
-                "Description": "Automatically accounts for the detected playback latency of your audio hardware. This latency may be inaccurate, disable this setting if your audio calibration is negative."
-            },
             "BassVolume": {
                 "Name": "Bass Volume",
-                "PauseName": "Bass",
                 "Description": "Adjusts the song's bass guitar track volume. Only does something if the song is multi-track."
             },
             "ClapsInStarpower": {
                 "Name": "Star Power Claps",
                 "Description": "Enables claps to the beat while Star Power is active."
             },
-            "OverstrumAndOverhitSoundEffects": {
-                "Name": "Overstrum/Overhit Sound Effects",
-                "Description": "Enables the overstrum/overhit sound effect."
-            },
             "CrowdVolume": {
                 "Name": "Crowd Volume",
-                "PauseName": "Crowd",
                 "Description": "Adjusts the song's crowd track volume. Only does something if the song is multi-track."
             },
             "DisableBloom": {
@@ -492,7 +373,7 @@
             },
             "DisableTextNotifications": {
                 "Name": "Disable Text Notifications",
-                "Description": "Disables text notification on the track such as \"100-Note Streak\" and \"Full Combo.\""
+                "Description": "Disables text notification on the track such as \"100-Note Streak\" and \"Full Combo."
             },
             "DMXBlueChannels": {
                 "Name": "DMX Blue",
@@ -532,12 +413,7 @@
             },
             "DrumsVolume": {
                 "Name": "Drums Volume",
-                "PauseName": "Drums",
                 "Description": "Adjusts the song's drum track volume. Only does something if the song is multi-track."
-            },
-            "EnablePracticeSP": {
-                "Name": "Star Power in Practice",
-                "Description": "Allow Star Power phrases while in Practice Mode."
             },
             "FpsCap": {
                 "Name": "FPS Cap",
@@ -563,7 +439,6 @@
             },
             "GuitarVolume": {
                 "Name": "Guitar Volume",
-                "PauseName": "Guitar",
                 "Description": "Adjusts the song's guitar track volume. Only does something if the song is multi-track."
             },
             "HighScoreInfo": {
@@ -585,7 +460,6 @@
             },
             "KeysVolume": {
                 "Name": "Keys Volume",
-                "PauseName": "Keys",
                 "Description": "Adjusts the song's keys track volume. Only does something if the song is multi-track."
             },
             "KickBounceMultiplier": {
@@ -609,7 +483,6 @@
             },
             "MasterMusicVolume": {
                 "Name": "Master Music Volume",
-                "PauseName": "Master",
                 "Description": "Adjusts the song's volume as a whole."
             },
             "MicrophoneSensitivity": {
@@ -652,12 +525,10 @@
             },
             "RhythmVolume": {
                 "Name": "Rhythm Volume",
-                "PauseName": "Rhythm",
                 "Description": "Adjusts the song's rhythm guitar track volume. Only does something if the song is multi-track. In some song formats, this may also be the bass guitar."
             },
             "SfxVolume": {
                 "Name": "SFX Volume",
-                "PauseName": "SFX",
                 "Description": "Adjusts the game's sound effect volume, such as when gaining a star, or activating starpower."
             },
             "ShowAdvancedMusicLibraryOptions": {
@@ -690,7 +561,6 @@
             },
             "SongVolume": {
                 "Name": "Backing Track Volume",
-                "PauseName": "Backing",
                 "Description": "Adjusts the song's backing track volume. These are all of the instruments that are not included in the multi-track."
             },
             "StageKitEnabled": {
@@ -733,12 +603,10 @@
             },
             "VocalMonitoring": {
                 "Name": "Vocal Monitoring Volume",
-                "PauseName": "Monitoring",
                 "Description": "Adjusts the feedback you hear when singing."
             },
             "VocalsVolume": {
                 "Name": "Vocals Volume",
-                "PauseName": "Vocals",
                 "Description": "Adjusts the song's vocal track volume. Only does something if the song is multi-track."
             },
             "VSync": {
@@ -801,13 +669,13 @@
                 "Name": "DMX Keys",
                 "Description": "This channel gets additively set to the current key notes: Green (2), Red (4), Yellow (8), Blue (16), Orange (32)."
             },
-            "EnablePlaybackBuffer": {
-                "Name": "Use Audio Playback Buffer",
-                "Description": "Buffers audio data by decoding ahead-of-time in chunks. Improves audio stability on low-performance devices, at the cost of added latency on sound effects."
-            },
             "PlaybackBufferLength": {
                 "Name": "Playback Buffer Length",
-                "Description": "The size of the playback buffer, in milliseconds. Larger buffers provide more stability, but further increase the latency of sound effects."
+                "Description": "Larger values lower the chance for hearing cracks during stutters, but produce higher latency for special effects"
+            },
+            "EnablePlaybackBuffer": {
+                "Name": "Enables/Disables usage of the playback buffer",
+                "Description": "Decodes audio data ahead of time in chunks"
             },
             "ShowTime": {
                 "Name": "Show Time",
@@ -1089,8 +957,7 @@
                     "Description": "This determines how much of the phrase has to be accurately sung in order to fully fill the accuracy meter, in the Expert difficulty."
                 },
                 "HitWindow": {
-                    "Name": "Hit Window",
-                    "Description": "The size of the hit window, in milliseconds. Higher values allow notes to be hit earlier/later, smaller values require more precise timing."
+                    "Name": "Hit Window"
                 },
                 "HopoLeniency": {
                     "Name": "HOPO Leniency",
