Added localisation entries for Profile List headings Empty profile groups are now hidden

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -267,8 +267,11 @@
         },
         "ProfileList": {
             "Name": "Profiles",
+            "ActiveProfiles" : "Active Profiles",
             "AddBot": "Add Bot",
-            "AddProfile": "Add Profile"
+            "AddProfile": "Add Profile",
+            "Bots" : "Bots",
+            "Players" : "Players"
         },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
