Always On Drum SFX
Added an "Always-On Drum SFX" toggle.

Not the best implementation but will do as a temporary method.. This is global and not per-profile

Feel free to deny, I'm terrible at coding stuff and already know this is bad lol.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -519,6 +519,10 @@
                 "Name": "Overstrum/Overhit Sound Effects",
                 "Description": "Enables the overstrum/overhit sound effect."
             },
+            "AlwaysOnDrumSFX": {
+                "Name": "Always-On Drum SFX",
+                "Description": "Enables Drum SFX at all times."
+            },
             "CrowdVolume": {
                 "Name": "Crowd Volume",
                 "PauseName": "Crowd",
