Added "Band score not saved" message to ScoreScreen.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -286,6 +286,9 @@
             "Bots" : "Bots",
             "Players" : "Players"
         },
+        "ScoreScreen" : {
+            "BandScoreNotSaved" : "(Band score not saved)"
+        },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
             "SearchHeader": {
