--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -714,6 +714,10 @@
                     "Sparse": "50, 100, 250, 500, ..."
                 }
             },
+            "PracticeRestartDelay": {
+                "Name": "Practice Restart Delay",
+                "Description": "The amount of time (in seconds) to delay the beginning of a section in Practice Mode."
+            },
             "PreviewVolume": {
                 "Name": "Preview Volume",
                 "Description": "The preview volume while in the music library."
