Move highway colours to separate HighwayPreset class, and update usages Update TrackPreviewBuilder to force Star Power and Groove on as needed Added Highway Preset option to ProfileSidebar Moved localization text to subkey

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -953,7 +953,8 @@
         "PresetType": {
             "CameraSettingsContainer": "Camera Presets",
             "ColorProfileContainer": "Color Profiles",
-            "EnginePresetContainer": "Engine Presets"
+            "EnginePresetContainer": "Engine Presets",
+            "HighwayPresetContainer" : "Highway Presets"
         },
         "PresetSetting": {
             "CameraPreset": {
@@ -999,30 +1000,6 @@
                 },
                 "ActivationNote": {
                     "Name": "Activation Note"
-                },
-                "BackgroundBaseColor1": {
-                    "Name": "Background Base Color 1"
-                },
-                "BackgroundBaseColor2": {
-                    "Name": "Background Base Color 2"
-                },
-                "BackgroundBaseColor3": {
-                    "Name": "Background UNKNOWN Color"
-                },
-                "BackgroundPatternColor": {
-                    "Name": "Background Pattern Color"
-                },
-                "BackgroundGrooveBaseColor1": {
-                    "Name": "Groove Base Color 1"
-                },
-                "BackgroundGrooveBaseColor2": {
-                    "Name": "Groove Base Color 2"
-                },
-                "BackgroundGrooveBaseColor3": {
-                    "Name": "Groove UNKNOWN Color"
-                },
-                "BackgroundGroovePatternColor": {
-                    "Name": "Groove Pattern Color"
                 },
                 "BlueCymbal": {
                     "Name": "Blue Cymbal"
@@ -1161,9 +1138,6 @@
                 },
                 "RedStarpower": {
                     "Name": "Red Star Power"
-                },
-                "StarPowerColor": {
-                    "Name": "Star Power Color"
                 },
                 "YellowCymbal": {
                     "Name": "Yellow Cymbal"
@@ -1346,6 +1320,35 @@
                 "SustainDropLeniency": {
                     "Name": "Sustain Drop Leniency",
                     "Description": ""
+                }
+            },
+            "HighwayPreset" : {
+                "BackgroundBaseColor1": {
+                    "Name": "Background Base Color 1"
+                },
+                "BackgroundBaseColor2": {
+                    "Name": "Background Base Color 2"
+                },
+                "BackgroundBaseColor3": {
+                    "Name": "Background UNKNOWN Color"
+                },
+                "BackgroundPatternColor": {
+                    "Name": "Background Pattern Color"
+                },
+                "BackgroundGrooveBaseColor1": {
+                    "Name": "Groove Base Color 1"
+                },
+                "BackgroundGrooveBaseColor2": {
+                    "Name": "Groove Base Color 2"
+                },
+                "BackgroundGrooveBaseColor3": {
+                    "Name": "Groove UNKNOWN Color"
+                },
+                "BackgroundGroovePatternColor": {
+                    "Name": "Groove Pattern Color"
+                },
+                "StarPowerColor": {
+                    "Name": "Star Power Color"
                 }
             }
         }
