--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -287,6 +287,9 @@
             "Bots" : "Bots",
             "Players" : "Players"
         },
+        "ScoreScreen" : {
+            "BandScoreNotSaved" : "(Band score not saved)"
+        },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
             "SearchHeader": {
