Tweaked "Score not saved" message

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -288,7 +288,7 @@
             "Players" : "Players"
         },
         "ScoreScreen" : {
-            "BandScoreNotSaved" : "(Band score not saved)"
+            "BandScoreNotSaved" : "(Score not saved)"
         },
         "Settings": {
             "NoFolder": "<i>No Folder</i>",
