--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -537,6 +537,15 @@
                 "Name": "Always-On Drum SFX",
                 "Description": "Enables Drum SFX at all times."
             },
+            "BandComboType": {
+                "Name": "Band Streak Type",
+                "Description": "Adjusts how Band Streak is calculated in multiplayer sessions.",
+                "Dropdown": {
+                    "Off": "Off",
+                    "Lenient": "Lenient",
+                    "Strict": "Strict"
+                }
+            },
             "CrowdVolume": {
                 "Name": "Crowd Volume",
                 "PauseName": "Crowd",
